--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EveryWeather</string>
+    <string name="everyweather">EveryWeather</string>
+    <string name="search_placeholder">Поиск…</string>
+    <string name="search">Поиск</string>
 </resources>
