feat(MainActivity): add new features
- Add location, region and country names
- Add weather icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="everyweather">EveryWeather</string>
     <string name="search_placeholder">Поиск…</string>
     <string name="search">Поиск</string>
+    <string name="weather_icon">weather_icon</string>
 </resources>
