feat(MainActivity): complete change of activity_main.xml
- Add new cool fonts (montserrat)
- Change color palette
- Full change of the visible city weather design (one of the most change - separated information)
- Add some extra lines (app's developer)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search_placeholder">Введите город…</string>
     <string name="search">Поиск</string>
     <string name="weather_icon">weather_icon</string>
+    <string name="developed_by_vladusecho">Developed by Vladusecho</string>
 </resources>
