--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search">Поиск</string>
     <string name="weather_icon">weather_icon</string>
     <string name="developed_by_vladusecho">Developed by Vladusecho</string>
+    <string name="hours_forecast">Подробный почасовой прогноз</string>
 </resources>
