feat(ForecastActivity): add new activity - add recycler view to ForecastActivity.kt - add workable button in MainActivity.kt to see a day forecast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="weather_icon">weather_icon</string>
     <string name="developed_by_vladusecho">Developed by Vladusecho</string>
     <string name="hours_forecast">Подробный почасовой прогноз</string>
+    <string name="back_button">back_button</string>
 </resources>
