feat(ForecastActivity): add new styles and features - add new style for the forecast - add some visible options: weather description, wind, rain and icon - add title with date of the forecast - add not working button to back

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="developed_by_vladusecho">Developed by Vladusecho</string>
     <string name="hours_forecast">Подробный почасовой прогноз</string>
     <string name="back_button">back_button</string>
+    <string name="back">Вернуться назад…</string>
+    <string name="date_placeholder">%s %s %s</string>
 </resources>
